* lib/rdoc/parser/c.rb: fixed a small error in the documentation.   [ruby-core:24744]  reapplied r24395.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27181 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-Fri Apr  2 14:12:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Fri Apr  2 14:14:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/parser/c.rb: fixed a small error in the documentation.
+	  [ruby-core:24744]  reapplied r24395.
 
 	* lib/rdoc/parser.rb (RDoc::Parser.binary?): blksize may be nil
 	  and is irrelevant to whether a file is binary.  TAB and newlines
