--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-Fri Apr  2 14:14:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Fri Apr  2 14:16:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/parser/ruby.rb (RDoc::Parser::Ruby): parse also rdoc
+	  files.  reapplied r24976.
 
 	* lib/rdoc/parser/c.rb: fixed a small error in the documentation.
 	  [ruby-core:24744]  reapplied r24395.
