--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr  2 14:24:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/rdoc.rb (RDoc::RDoc#parse_files): emacs local variables
+	  are delimited by a semicolon.  supported Vim style.  reapplied
+	  r24988 with fixing a typo for shebang.
+
 Fri Apr  2 14:16:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/parser/ruby.rb (RDoc::Parser::Ruby): parse also rdoc
