--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  2 15:26:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/rdoc/test_rdoc_ri_driver.rb (with_dummy_pager): don't grap
+	  terminal.
+
 Fri Apr  2 14:43:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/rdoc.rb (RDoc::Generator): defer by autoload.
