* NEWS: added reverse_lookup option.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27190 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  2 21:17:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* NEWS: added reverse_lookup option.
+
 Fri Apr  2 15:26:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* test/rdoc/test_rdoc_ri_driver.rb (with_dummy_pager): don't grasp
