* lib/rdoc/rdoc.rb: reverted r27186 to add generators.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27191 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  2 22:13:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/rdoc.rb: reverted r27186 to add generators.
+
 Fri Apr  2 21:17:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* NEWS: added reverse_lookup option.
