--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  2 22:28:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/parser/c.rb (RDoc#handle_method): see source files in
+	  source directory.
+
 Fri Apr  2 22:13:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/rdoc.rb: reverted r27186 to add generators.
