--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Apr  3 01:50:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/parser/ruby.rb (RDoc#make_message): no empty lines.
+
+	* lib/rdoc/stats.rb (RDoc::Normal#print_file): send to stdout and
+	  flush always
+
 Sat Apr  3 00:03:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/class_module.rb (RDoc#merge): get rid of stack overflow.
