--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Apr  3 03:19:01 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* lib/benchmark.rb (Benchmark::Tms#add): fix NameError.
+	  [ruby-dev:40906]
+
+	* test/benchmark/test_benchmark.rb: add a test for above.
+
 Sat Apr  3 01:50:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/parser/ruby.rb (RDoc#make_message): no empty lines.
