* tool/file2lastrev.rb (VCS#relative_to): path and @srcdir may have   different relative-ness.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27199 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr  3 04:46:00 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/file2lastrev.rb (VCS#relative_to): path and @srcdir may have
+	  different relative-ness.
+
 Sat Apr  3 03:19:01 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* lib/benchmark.rb (Benchmark::Tms#add): fix NameError.
