--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,7 @@ with all sufficient information, see the ChangeLog file.
       * Array#sort_by!
 
     * extended methods:
-      * Array#{uniq,uniq!} can take a block.
+      * Array#{uniq,uniq!,product} can take a block.
 
   * Dir
     * new method:
