* lib/rdoc/rdoc.rb (RDoc#{setup,update}_output_dir): store mtimes   per files in the flag file.
* lib/rdoc/rdoc.rb (RDoc#normalized_file_list): skip already
  processed and unmodified files.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27207 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Apr  3 18:15:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/rdoc.rb (RDoc#{setup,update}_output_dir): store mtimes
+	  per files in the flag file.
+
+	* lib/rdoc/rdoc.rb (RDoc#normalized_file_list): skip already
+	  processed and unmodified files.
+
 Sat Apr  3 15:09:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* common.mk (rdoc): no force-update, and add RDOCFLAGS.
