--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr  3 22:47:51 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c: don't define STRUCT_WIDEVAL.
+
 Sat Apr  3 18:15:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/rdoc.rb (RDoc#{setup,update}_output_dir): store mtimes
