--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Apr  4 06:46:16 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* lib/yaml: Moved to ext/syck/lib, Syck only uses Syck constant.
+	* lib/yaml.rb: Added an engine manager for choosing YAML engine.
+	* ext/syck/lib/syck/rubytypes.rb: squashed warnings when using Psych
+
 Sat Apr  3 22:47:51 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: don't define STRUCT_WIDEVAL.
