--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr  4 09:44:01 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (lt): call <=> instead of <.
+
 Sun Apr  4 06:46:16 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* lib/yaml: Moved to ext/syck/lib, Syck only uses Syck constant.
