--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Sun Apr  4 22:18:32 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (cmp): optimize for fixnums.
+	  (lt): use cmp.
+	  (gt): ditto.
+	  (le): ditto.
+	  (ge): ditto.
+	  (wlt): use wcmp.
+	  (wgt): ditto.
+	  (wle): ditto.
+	  (wge): ditto.
+	  (time_subsec): use wmod.
+
 Sun Apr  4 10:04:28 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* include/ruby/ruby.h: replace snprintf and vsnprintf by
