--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr  5 13:08:24 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/mkexports.rb (each_export): VC10 support.
+	  a patch from Charlie Savage in [ruby-core:29254]
+
 Sun Apr  4 22:18:32 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (cmp): optimize for fixnums.
