--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Apr  5 13:10:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/psych/lib/psych/core_ext.rb: remove before alias.
+
+	* ext/syck/lib/syck.rb: don't warn called by itself.
+
 Mon Apr  5 13:08:24 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/mkexports.rb (each_export): VC10 support.
