--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Apr  5 19:54:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* re.c (make_regexp): use onig_new_with_source to keep
+	  sourcefile and sourceline.
+
+	* re.c (onig_new_with_source): copied from onig_new in
+	  regcomp.c for keep sourcefile and sourceline.
+
 Mon Apr  5 13:20:45 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* include/ruby/win32.h, win32/win32.c (EWOULDBLOCK): VC10 already
