--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Tue Apr  6 05:59:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/rexml/parsers/baseparser.rb (LETTER, DIGIT):
+	  always use POSIX charclass.
+
+	* lib/rexml/parsers/baseparser.rb (NAMECHAR):
+	  remove duplicated range.
+
+	* lib/rexml/xmltokens.rb (NCNAME_STR, NAMECHAR): ditto.
+
+	* lib/rexml/parsers/xpathparser.rb (PathExpr): ditto. 
+
+	* lib/rexml/text.rb (REXML::Text#initialize):
+	  initialize @parent.
+
 Mon Apr  5 19:54:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* re.c (make_regexp): use onig_new_with_source to keep
