--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr  6 06:19:36 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/rexml/text.rb (REXML::Text.check): comment out
+	  broken logic.
+
 Tue Apr  6 05:59:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/rexml/parsers/baseparser.rb (LETTER, DIGIT):
