--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr  6 11:21:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* template/fake.rb.in: hooks for extconf.rb.
+
 Tue Apr  6 06:19:36 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/rexml/text.rb (REXML::Text.check): comment out
