--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Tue Apr  6 21:55:25 2010  Tanaka Akira  <akr@fsij.org>
+
+	* configure.in: test localtime(3) overflow.  [ruby-dev:40910]
+
+	* time.c (rb_gmtime_r): renamed from rb_gmtime.
+	  (rb_localtime_r): renamed from rb_localtime.
+	  (rb_localtime_r2): call rb_localtime_r and validate the result if
+	  there is overflow problem.
+	  (rb_gmtime_r2): call rb_gmtime_r and validate the result if there
+	  is overflow problem.
+	  
 Tue Apr  6 14:53:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* include/ruby/win32.h: check definition existance before defining
