* template/fake.rb.in: not define $extout to make target in cwd.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27242 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr  7 02:05:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* template/fake.rb.in: not define $extout to make target in cwd.
+
 Tue Apr  6 23:01:35 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* vm_core.h: Introduce UNINITIALIZED_VAR() macro.
