* lib/rdoc/rdoc.rb (RDoc#{initialize,setup_output_dir}):   initialize @last_created and use it.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27243 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Apr  7 03:28:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/rdoc.rb (RDoc#{initialize,setup_output_dir}):
+	  initialize @last_created and use it.
+
 Wed Apr  7 02:05:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* template/fake.rb.in: not define $extout to make target in cwd.
