--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr  7 09:44:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in (Makefile): qoute init-commands.
+
 Wed Apr  7 03:28:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/rdoc.rb (RDoc#{initialize,setup_output_dir}):
