Fix previous commit.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27245 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Wed Apr  7 09:44:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
-	* configure.in (Makefile): qoute init-commands.
+	* configure.in (Makefile): quote init-commands.
+
+	* configure.in (Makefile): `make ruby` builds ruby command
+	  even if RUBY_INSTALL_NAME is customized or it has extension.
 
 Wed Apr  7 03:28:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
