--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Apr  7 11:49:34 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/rexml/quickpath.rb (REXML::QuickPath::predicate):
+	  fix regexp.
+
 Wed Apr  7 09:44:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (Makefile): quote init-commands.
