--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr  7 16:45:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in (Makefile): reverted r27244.
+
 Wed Apr  7 11:49:34 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/rexml/quickpath.rb (REXML::QuickPath::predicate):
