--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr  7 21:44:14 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (ASCTIME): unused macro removed.
+
 Wed Apr  7 16:45:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (Makefile): reverted r27244.
