--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Apr  7 23:33:55 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* misc/ruby-mode.el (ruby-mode-map): binded C-c C-c and C-c C-c C-u
+	  to comment-region and uncomment-region. Thanks Michael Klishin!
+	  [Feature #872] [ruby-core:20552]
+
 Wed Apr  7 21:44:14 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (ASCTIME): unused macro removed.
