--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Apr  8 02:33:55 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* array.c (rb_ary_permutation): Remove limitation for lengthy permutations
+	  [ruby-core:29240]
+
+	* test/ruby/test_array.rb: ditto
+
 Wed Apr  7 23:33:55 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* misc/ruby-mode.el (ruby-mode-map): binded C-c C-c and C-c C-c C-u
