* lib/yaml.rb (YAML::EngineManager#yamler): set the result after   successfully switched.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27256 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr  8 11:31:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/yaml.rb (YAML::EngineManager#yamler): set the result after
+	  successfully switched.
+
 Thu Apr  8 07:22:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* random.c (rand_init): ignore higher bits if all they are same as
