* lib/yaml.rb: use Psych if only it is loaded already.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27257 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Thu Apr  8 11:31:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Thu Apr  8 11:45:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/yaml.rb: use Psych if only it is loaded already.
 
 	* lib/yaml.rb (YAML::EngineManager#yamler): set the result after
 	  successfully switched.
