--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  8 14:33:24 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* configure.in: --disable-install-doc should prohibit doxygen.
+
 Thu Apr  8 14:23:51 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* include/ruby/win32.h: include errno.h before defining errnos.
