--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  9 10:53:00 2010  Kenta Murata <mrkn@mrkn.jp>
+
+	* compile.c (iseq_compile_each): stop hiding, and freeze unpopped
+	string nodes to allow method redefinition.  [ruby-dev:40641]
+
 Fri Apr  9 01:26:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (internal_{read,write}_func, rb_{read,write}_internal):
