--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  9 20:05:05 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* dir.c (push_glob): add RB_GC_GUARD to prevent str being free'ed.
+	  a patch from Masaya TARUI in [ruby-dev:40939].  [ruby-dev:40514]
+
 Fri Apr  9 10:53:00 2010  Kenta Murata <mrkn@mrkn.jp>
 
 	* compile.c (iseq_compile_each): stop hiding, and freeze unpopped
