* dir.c (push_glob): clear up the previous commit (RB_GC_GUARD can   precede the last reference).  [ruby-dev:40942]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27269 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  9 20:29:13 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* dir.c (push_glob): clear up the previous commit (RB_GC_GUARD can
+	  precede the last reference).  [ruby-dev:40942]
+
 Fri Apr  9 20:05:05 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* dir.c (push_glob): add RB_GC_GUARD to prevent str being free'ed.
