* ext/socket/ipsocket.c (init_inetsock_internal),   ext/socket/unixsocket.c (rsock_init_unixsock): check the result of   listen(2).  based on a patch from Mike Pomraning.  [ruby-core:23698]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27272 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr  9 23:51:45 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/socket/ipsocket.c (init_inetsock_internal),
+	  ext/socket/unixsocket.c (rsock_init_unixsock): check the result of
+	  listen(2).  based on a patch from Mike Pomraning.  [ruby-core:23698]
+
 Fri Apr  9 21:22:10 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>
 
 	* lib/irb/completion.rb (CompletionProc): irb will be stuck with
