--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  9 23:57:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/pty/lib/expect.rb: add rdoc.  based on a patch from Luiz Angelo
+	  Daros de Luca in [ruby-core:23464].
+
 Fri Apr  9 23:54:16 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* lib/irb/init.rb, lib/irb/lc/help-message,
