* ext/pty/lib/expect.rb: raise an error when argument is unexpected   type.  based on a patch from Luiz Angelo Daros de Luca in   [ruby-core:23464].
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27276 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr  9 23:58:58 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/pty/lib/expect.rb: raise an error when argument is unexpected
+	  type.  based on a patch from Luiz Angelo Daros de Luca in
+	  [ruby-core:23464].
+
 Fri Apr  9 23:57:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* ext/pty/lib/expect.rb: add rdoc.  based on a patch from Luiz Angelo
