--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Apr 10 00:01:51 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/pty/lib/expect.rb: preserve buffer read, instead of discard.
+	  based on a patch from Luiz Angelo Daros de Luca in
+	  [ruby-core:23464].
+
 Fri Apr  9 23:58:58 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* ext/pty/lib/expect.rb: raise an error when argument is unexpected
