* ext/psych/lib/psych/deprecated.rb: implementing Psych.quick_emit and   adding deprecation warnings. * ext/psych/lib/psych/visitors/to_ruby.rb: supporting deprecated   yaml_initialize api. * ext/psych/lib/psych/visitors/yaml_tree.rb: supporting deprecated   to_yaml api.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27280 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sat Apr 10 05:27:26 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/deprecated.rb: implementing Psych.quick_emit and
+	  adding deprecation warnings.
+	* ext/psych/lib/psych/visitors/to_ruby.rb: supporting deprecated
+	  yaml_initialize api.
+	* ext/psych/lib/psych/visitors/yaml_tree.rb: supporting deprecated
+	  to_yaml api.
+
 Sat Apr 10 01:08:53 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/parser.c: parse raises a TypeError when nil is passed in.
