--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 10 07:36:13 2010  wanabe  <s.wanabe@gmail.com>
+
+	* vm_method.c (rb_add_method): clear attr.location before rb_ary_new3.
+	  a patch from Masaya TARUI in [Bug #3108]
+
 Sat Apr 10 05:27:26 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych/deprecated.rb: implementing Psych.quick_emit and
