--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 10 13:14:22 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/openssl/ossl_ssl.c (Init_ossl_ssl): add SSLContext#ssl_timeout=,
+	  which allows net/https to specify timeout.  [ruby-core:24812]
+
 Sat Apr 10 07:36:13 2010  wanabe  <s.wanabe@gmail.com>
 
 	* vm_method.c (rb_add_method): clear attr.location before rb_ary_new3.
