* lib/rdoc/markup/preprocess.rb (RDoc::Markup::PreProcess#handle):   use File.binread to avoid locale dependency.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27284 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 10 21:26:22 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/rdoc/markup/preprocess.rb (RDoc::Markup::PreProcess#handle):
+	  use File.binread to avoid locale dependency.
+
 Sat Apr 10 15:18:26 2010  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rdoc: Import RDoc 2.5.2
